# discord_export_chat_loader

./: .gitignore  README.md  pyproject.toml
src/discord_export_chat_loader/: __init__.py
src/lc_discord_export_loader/: __init__.py  loader.py
